fix: sidenav badge aligning

--- a/components/Sidenav/src/index.scss
+++ b/components/Sidenav/src/index.scss
@@ -43,6 +43,7 @@
 .denhaag-sidenav__link-label {
   display: flex;
   gap: var(--denhaag-sidenav-link-label-gap);
+  align-items: center;
 }
 
 .denhaag-sidenav__link:hover,
